--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -125,7 +125,7 @@
         <option value="Allocricetulus curtatus">Allocricetulus curtatus</option>
     </optgroup>
     <optgroup label="Alticola (Voles)">
-        <option value="Alticola">Alticola</option>
+        <option value="Alticola">Alticola (Unspecified)</option>
         <option value="Alticola barakshin">Alticola barakshin</option>
         <option value="Alticola barakshin">Alticola barakshin cf.</option>
         <option value="Alticola semicanus">Alticola semicanus</option>
@@ -133,7 +133,7 @@
         <option value="Alticola tuvinicus cf.">Alticola tuvinicus cf.</option>
     </optgroup>
     <optgroup label="Apodemus (Field Mice)">
-        <option value="Apodemus">Apodemus</option>
+        <option value="Apodemus">Apodemus (Unspecified)</option>
         <option value="Apodemus agrarius">Apodemus agrarius</option>
         <option value="Apodemus peninsulae">Apodemus peninsulae</option>
         <option value="Apodemus uralensis">Apodemus uralensis</option>
@@ -157,12 +157,12 @@
   <option value="Cervus canadensis">Cervus canadensis</option>
 </optgroup>
 <optgroup label="Clethrionomys (Red-Backed Voles)">
-  <option value="Clethrionomys">Clethrionomys</option>
+  <option value="Clethrionomys">Clethrionomys (Unspecified)</option>
   <option value="Clethrionomys rutilus">Clethrionomys rutilus</option>
   <option value="Clethrionomys rutilus cf.">Clethrionomys rutilus cf.</option>
 </optgroup>
 <optgroup label="Cnephaeus (Serotine Bats)">
-  <option value="Cnephaeus">Cnephaeus</option>
+  <option value="Cnephaeus">Cnephaeus (Unspecified)</option>
   <option value="Cnephaeus gobiensis">Cnephaeus gobiensis</option>
   <option value="Cnephaeus nilssonii">Cnephaeus nilssonii</option>
   <option value="Cnephaeus serotinus">Cnephaeus serotinus</option>
@@ -172,7 +172,7 @@
   <option value="Craseomys rufocanus cf.">Craseomys rufocanus cf.</option>
 </optgroup>
 <optgroup label="Cricetulus (Hamsters)">
-  <option value="Cricetulus">Cricetulus</option>
+  <option value="Cricetulus">Cricetulus (Unspecified)</option>
   <option value="Cricetulus barabensis">Cricetulus barabensis</option>
   <option value="Cricetulus barabensis cf.">Cricetulus barabensis cf.</option>
   <option value="Cricetulus longicaudatus">Cricetulus longicaudatus</option>
@@ -221,7 +221,7 @@
   <option value="Lepus tolai">Lepus tolai</option>
 </optgroup>
 <optgroup label="Marmota (Marmots)">
-  <option value="Marmota">Marmota</option>
+  <option value="Marmota">Marmota (Unspecified)</option>
   <option value="Marmota baibacina">Marmota baibacina</option>
   <option value="Marmota sibirica">Marmota sibirica</option>
 </optgroup>
@@ -233,7 +233,7 @@
   <option value="Meles meles">Meles meles</option>
 </optgroup>
 <optgroup label="Meriones (Gerbils)">
-  <option value="Meriones">Meriones</option>
+  <option value="Meriones">Meriones (Unspecified)</option>
   <option value="Meriones meridianus">Meriones meridianus</option>
   <option value="Meriones tamariscinus">Meriones tamariscinus</option>
   <option value="Meriones unguiculatus">Meriones unguiculatus</option>
@@ -242,11 +242,11 @@
   <option value="Mesechinus dauuricus">Mesechinus dauuricus</option>
 </optgroup>
 <optgroup label="Microtus (Voles)">
-  <option value="Microtus">Microtus</option>
+  <option value="Microtus">Microtus (Unspecified)</option>
   <option value="Microtus arvalis">Microtus arvalis</option>
 </optgroup>
 <optgroup label="Mus (Mice)">
-  <option value="Mus">Mus</option>
+  <option value="Mus">Mus (Unspecified)</option>
   <option value="Mus musculus">Mus musculus</option>
 </optgroup>
 <optgroup label="Mustela (Weasels and Polecats)">
@@ -263,7 +263,7 @@
   <option value="Myospalax psilurus">Myospalax psilurus</option>
 </optgroup>
 <optgroup label="Myotis (Mouse-Eared Bats)">
-  <option value="Myotis">Myotis</option>
+  <option value="Myotis">Myotis (Unspecified)</option>
   <option value="Myotis brandtii">Myotis brandtii</option>
   <option value="Myotis davidii">Myotis davidii</option>
   <option value="Myotis petax">Myotis petax</option>
@@ -276,7 +276,7 @@
     <option value="Nothocricetulus migratorius">Nothocricetulus migratorius</option>
   </optgroup>
   <optgroup label="Ochotona (Pikas)">
-    <option value="Ochotona">Ochotona</option>
+    <option value="Ochotona">Ochotona (Unspecified)</option>
     <option value="Ochotona alpina">Ochotona alpina</option>
     <option value="Ochotona dauurica">Ochotona dauurica</option>
     <option value="Ochotona hoffmanni">Ochotona hoffmanni</option>
@@ -287,7 +287,7 @@
       <option value="Ondatra zibethicus">Ondatra zibethicus</option>
     </optgroup>
     <optgroup label="Orientallactaga (Jerboas)">
-      <option value="Orientallactaga">Orientallactaga</option>
+      <option value="Orientallactaga">Orientallactaga (Unspecified)</option>
       <option value="Orientallactaga balikunica">Orientallactaga balikunica</option>
       <option value="Orientallactaga bullata">Orientallactaga bullata</option>
       <option value="Orientallactaga sibirica">Orientallactaga sibirica</option>
@@ -297,7 +297,7 @@
       <option value="Ovis aries">Ovis aries</option>
     </optgroup>
     <optgroup label="Phodopus (Dwarf Hamsters)">
-      <option value="Phodopus">Phodopus</option>
+      <option value="Phodopus">Phodopus (Unspecified)</option>
       <option value="Phodopus campbelli">Phodopus campbelli</option>
       <option value="Phodopus roborovskii">Phodopus roborovskii</option>
     </optgroup>
@@ -322,7 +322,7 @@
       <option value="Sciurus vulgaris">Sciurus vulgaris</option>
     </optgroup>
     <optgroup label="Sorex (Long-Tailed Shrews)">
-      <option value="Sorex">Sorex</option>
+      <option value="Sorex">Sorex (Unspecified)</option>
       <option value="Sorex araneus">Sorex araneus</option>
       <option value="Sorex caecutiens">Sorex caecutiens</option>
       <option value="Sorex daphaenodon">Sorex daphaenodon</option>
@@ -351,7 +351,7 @@
       <option value="Urocitellus undulatus">Urocitellus undulatus</option>
     </optgroup>
     <optgroup label="Vespertilio (Frosted Bats)">
-      <option value="Vespertilio">Vespertilio</option>
+      <option value="Vespertilio">Vespertilio (Unspecified)</option>
       <option value="Vespertilio murinus">Vespertilio murinus</option>
     </optgroup>
     <optgroup label="Vormela (Marbled Polecats)">
