--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Монгол орны хөхтөн амьтан</title>
+  <title>МоХөП</title>
 
   <meta charset="UTF-8">
   <meta name="referrer" content="strict-origin-when-cross-origin">
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div id="Titles" style="height:70px;">
-    Монгол орны хөхтөн амьтан
+    МоХөП
   </div>
   <!--About Info-->
   <div id="About">
@@ -53,7 +53,7 @@
   <div class="modal-background" id="modal-background">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h3>Тухай</h3>
+      <h3>Тухай MoХөП (Монголын хөхтөн ба паразитуудыг)</h3>
         <p  id="aboutContent">Энэхүү газрын зураг нь Баруун өмнөд биологийн музейн Монголын хөхтөн амьтны
             цогц цуглуулгад оруулсан хүчин чармайлтыг харуулах зорилготой юм. АНУ ын Үндэсний Шинжлэх Ухааны Сангаас санхүүжүүлж буй “Тал нутгийн шимэгч
             хорхойн сүлжээ” энэхүү төсөл нь Төв Азийн хөхтөн амьтад, тэдгээрийн шимэгч
