--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mammals of Mongolia</title>
+  <title>MoMaP</title>
 
   <meta charset="UTF-8">
   <meta name="referrer" content="strict-origin-when-cross-origin">
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div id="Titles">
-    Mammals of Mongolia
+    MoMaP
   </div>
   <!--About Info-->
   <div id="About">
@@ -53,8 +53,8 @@
   <div class="modal-background" id="modal-background">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h3>About</h3>
-        <p  id="aboutContent">This map is intended to display the Museum of Southwestern Biology's efforts of holistic mammal collection on Mongolia. 
+      <h3>About MoMaP</h3>
+        <p  id="aboutContent">MoMap (Mongolian Mammals and Parasites) is intended to display the Museum of Southwestern Biology's efforts of holistic mammal and parasite collection in Mongolia. 
           Funded by the National Science Foundation, the Steppe Parasite Networks Project focuses on the mammals and parasites of Central Asia. 
           This project would not be possible without the efforts of multiple principal investigators, students, and volunteers throughout the United States and especially, Mongolia.
           <br><br>
@@ -62,7 +62,7 @@
           With the goal of accessibility, this webpage can be displayed in English and Mongolian.
           <br><br>
           This map can display mammal species, their ranges, and their associated parasites. 
-          The available collections will range from 1997 to the most recent trip to Mongolia in 2022.
+          The available collections will range from 1997 to the most recent trip to Mongolia in 2023.
         </p>
       <h3>Creators</h3>
         <p><strong>Creator: </strong><a class="link" href="https://litsawoo.github.io/" target="_blank">Litsa Wooten</a> (wootenl@unm.edu) 
