--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>MoMaP</title>
+  <link rel="icon" type="image/x-icon" href="JerbFavicon.png">
 
   <meta charset="UTF-8">
   <meta name="referrer" content="strict-origin-when-cross-origin">
