--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <div id="Titles">
-    <img src="MoMapLogo.png">
+    <img src="MoMapLogo2.png">
   </div>
   <!--About Info-->
   <div id="About">
