--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -85,6 +85,8 @@
             <a class="link" href="https://www.codexworld.com/multi-select-dropdown-list-with-checkbox-jquery/" target="_blank">Multiselect Dropdown Menu</a>
             <br>
             <a class="link" href="http://leaflet-extras.github.io/leaflet-providers/preview/" target="_blank">Map Base Layers</a>
+            <br>
+            <a class="link" href="https://dannyibanez.myportfolio.com/work" target="_blank">Danny Ibañez- MoMaP Logo Creator</a>
         </p>
     </div>
   </div>
