--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -156,10 +156,12 @@
         <option value="Myotis">Багваахай (Тодорхойлоогүй)</option>
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
+        <option value="Myotis davidii cf.">Хээрийн сахалт багваахай cf.</option>
         <option value="Myotis petax">Дорнодын уссаг багваахай</option>
         <option value="Myotis sibiricus">Сибирийн сахалт багваахай</option>
         </optgroup>
         <optgroup label="Багваахай (Plecotus)">
+          <option value="Plectous">Багваахай</option>
           <option value="Plecotus kozlovi">Саарал соотон багваахай</option>
           <option value="Plecotus ognevi">Бор соотон багваахай</option>
         </optgroup>
@@ -227,6 +229,7 @@
             <option value="Clethrionomys rutilus cf.">Ойн улаан оготно cf.</option>
           </optgroup>
           <optgroup label="Оготно (Craseomys)">
+            <option value="Craseomys">Оготно</option>
             <option value="Craseomys rufocanus">Ойн хүрэн оготно</option>
             <option value="Craseomys rufocanus">Ойн хүрэн оготно cf.</option>
           </optgroup>
@@ -301,6 +304,7 @@
           <option value="Orientallactaga">Үсэрч Буй Хулгана (Тодорхойлоогүй)</option>
           <option value="Orientallactaga balikunica">Өмнөговийн алагдаага</option>
           <option value="Orientallactaga bullata">Говийн алагдаага</option>
+          <option value="Orientallactaga elater">Давжаа алагдаага</option>
           <option value="Orientallactaga sibirica">Сибирь алагдаага</option>
         </optgroup>
         <optgroup label="Үсэрч Буй Хулгана (Cardiocranius)">
@@ -320,6 +324,7 @@
             <option value="Salpingotus kozlovi">Козловын атигдаахай</option>
         </optgroup>
         <optgroup label="Үсэрч Буй Хулгана (Stylodipus)">
+          <option value="Stylodipus">Даахай (Тодорхойлоогүй)</option>
           <option value="Stylodipus andrewsi">Монгол даахай</option>
           <option value="Stylodipus sungorus">Зүүнгарын даахай</option>
         </optgroup>
