--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -171,6 +171,7 @@
   <option value="Cnephaeus serotinus">Cnephaeus serotinus</option>
 </optgroup>
 <optgroup label="Craseomys (Red-Backed Voles)">
+  <option value="Craseomys">Craseomys</option>
   <option value="Craseomys rufocanus">Craseomys rufocanus</option>
   <option value="Craseomys rufocanus cf.">Craseomys rufocanus cf.</option>
 </optgroup>
@@ -269,6 +270,7 @@
   <option value="Myotis">Myotis (Unspecified)</option>
   <option value="Myotis brandtii">Myotis brandtii</option>
   <option value="Myotis davidii">Myotis davidii</option>
+  <option value="Myotis davidii cf.">Myotis davidii cf.</option>
   <option value="Myotis petax">Myotis petax</option>
   <option value="Myotis sibiricus">Myotis sibiricus</option>
   </optgroup>
@@ -293,6 +295,7 @@
       <option value="Orientallactaga">Orientallactaga (Unspecified)</option>
       <option value="Orientallactaga balikunica">Orientallactaga balikunica</option>
       <option value="Orientallactaga bullata">Orientallactaga bullata</option>
+      <option value="Orientallactaga elater">Orientallactaga elater</option>
       <option value="Orientallactaga sibirica">Orientallactaga sibirica</option>
     </optgroup>
     <optgroup label="Ovis (Sheep)">
@@ -305,6 +308,7 @@
       <option value="Phodopus roborovskii">Phodopus roborovskii</option>
     </optgroup>
     <optgroup label="Plecotus (Long-Eared Bats)">
+      <option value="Plecotus">Plecotus</option>
       <option value="Plecotus kozlovi">Plecotus kozlovi</option>
       <option value="Plecotus ognevi">Plecotus ognevi</option>
     </optgroup>
@@ -347,6 +351,7 @@
       <option value="Stenocranius gregalis cf.">Stenocranius gregalis cf.</option>
     </optgroup>
     <optgroup label="Stylodipus (Jerboas)">
+      <option value="Stylodipus">Stylodipus (Unspecified)</option>
       <option value="Stylodipus andrewsi">Stylodipus andrewsi</option>
       <option value="Stylodipus sungorus">Stylodipus sungorus</option>
     </optgroup>
