--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -136,6 +136,9 @@
             <option value="Crocidura shantungensis">Азийн малтаахай</option>
             <option value="Crocidura suaveolens">Нутын малтаахай</option>
       </optgroup>
+      <optgroup label="Cармаахай (Chiroptera)">
+        <option value="Chiroptera">Cармаахай (Тодорхойлоогүй)</option>
+      </optgroup>
       <optgroup label="Хашир (Neomys)">
         <option value="Neomys fodiens">Усч гэрэлзгэнэ</option>
       </optgroup>
@@ -340,6 +343,7 @@
         <option value="Vormela peregusna">Эрээн хүрнэ</option>
       </optgroup>
        <optgroup label="Хошуу (Mustela)">
+        <option value="Mustelidae">Суусрын овог</option>
          <option value="Mustela altaica">Хээрийн солонго</option>
          <option value="Mustela erminea">цагаан Үен</option>
          <option value="Mustela eversmanii">Өмхий хүрэн</option>
