--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -159,6 +159,9 @@
 <optgroup label="Cervus (Elk)">
   <option value="Cervus canadensis">Cervus canadensis</option>
 </optgroup>
+<optgroup label="Chiroptera (Bats)">
+  <option value="Chiroptera">Chiroptera (Unidentified)</option>
+</optgroup>
 <optgroup label="Clethrionomys (Red-Backed Voles)">
   <option value="Clethrionomys">Clethrionomys (Unspecified)</option>
   <option value="Clethrionomys rutilus">Clethrionomys rutilus</option>
@@ -171,7 +174,6 @@
   <option value="Cnephaeus serotinus">Cnephaeus serotinus</option>
 </optgroup>
 <optgroup label="Craseomys (Red-Backed Voles)">
-  <option value="Craseomys">Craseomys</option>
   <option value="Craseomys rufocanus">Craseomys rufocanus</option>
   <option value="Craseomys rufocanus cf.">Craseomys rufocanus cf.</option>
 </optgroup>
@@ -254,6 +256,7 @@
   <option value="Mus musculus">Mus musculus</option>
 </optgroup>
 <optgroup label="Mustela (Weasels and Polecats)">
+  <option value="Mustelidae">Mustelidae (Unidentified)</option>
   <option value="Mustela altaica">Mustela altaica</option>
   <option value="Mustela erminea">Mustela erminea</option>
   <option value="Mustela eversmanii">Mustela eversmanii</option>
