--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -635,6 +635,17 @@
         </optgroup>
     </optgroup>
     </select>
+    <br>
+    <button class="button" id="download" style="
+    background-color: rgb(237, 237, 237);
+    color: black;
+    font-size: 14px;
+    border: none;
+    border-radius: 10px;
+    position: relative;
+    left: 25%;
+    margin-top: 5%;
+  ">Download Data</button>
   </div>
 
   
@@ -735,7 +746,7 @@
 </body>
 
 
-<script src="MongoliaLangjson.js"></script>
+<script src="MongoliaLangScript.js"></script>
 
 
 </html>
