--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -106,7 +106,7 @@
   border: none;
   border-radius: 10px;
   position: relative;
-  left: 30%;
+  left: 25%;
   margin-top: 5%;
 ">Toggle Cluster</button>
   <h3 class="Titles">Mammal Selector</h3>
@@ -632,6 +632,17 @@
         </optgroup>
     </optgroup>
     </select>
+    <br>
+    <button class="button" id="download" style="
+  background-color: rgb(237, 237, 237);
+  color: black;
+  font-size: 14px;
+  border: none;
+  border-radius: 10px;
+  position: relative;
+  left: 25%;
+  margin-top: 5%;
+">Download Data</button>
   </div>
 
   
@@ -731,7 +742,7 @@
 </body>
 
 
-<script src="Mongoliajson.js"></script>
+<script src="MongoliaScript.js"></script>
 
 
 </html>
