--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -164,7 +164,7 @@
         <option value="Myotis sibiricus">Сибирийн сахалт багваахай</option>
         </optgroup>
         <optgroup label="Багваахай (Plecotus)">
-          <option value="Plectous">Багваахай</option>
+          <option value="Plecotus">Багваахай</option>
           <option value="Plecotus kozlovi">Саарал соотон багваахай</option>
           <option value="Plecotus ognevi">Бор соотон багваахай</option>
         </optgroup>
