--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -174,6 +174,7 @@
   <option value="Cnephaeus serotinus">Cnephaeus serotinus</option>
 </optgroup>
 <optgroup label="Craseomys (Red-Backed Voles)">
+  <option value="Craseomys">Craseomys</option>
   <option value="Craseomys rufocanus">Craseomys rufocanus</option>
   <option value="Craseomys rufocanus cf.">Craseomys rufocanus cf.</option>
 </optgroup>
