--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div id="Titles" style="height:70px;">
-    МоХөП
+    <img src="MoMaP(Mong)Logo.png">
   </div>
   <!--About Info-->
   <div id="About">
