--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -37,8 +37,8 @@
 
 </head>
 <body>
-  <div id="Titles" style="height:70px;">
-    <img src="MoMaP(Mong)Logo.png">
+   <div id="Titles">
+    <img src="MoMaP(Mong)Logo2.png">
   </div>
   <!--About Info-->
   <div id="About">
