--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -38,7 +38,7 @@
 
 </head>
 <body>
-   <div id="Titles">
+  <div id="Titles">
     <img src="MoMaP(Mong)Logo2.png">
   </div>
   <!--About Info-->
@@ -338,7 +338,7 @@
         </optgroup>
         <optgroup label="Дорго (Meles)">
          <option value="Meles leucurus">Халздай дорго</option>
-         <option value="Meles meles">Meles meles</option>
+         <option value="Meles meles">Дорго</option>
        </optgroup>
        <optgroup label="Эрээн хүрнэ (Vormela)">
         <option value="Vormela peregusna">Эрээн хүрнэ</option>
