--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -646,7 +646,7 @@
     position: relative;
     left: 25%;
     margin-top: 5%;
-  ">Download Data</button>
+  ">Өгөгдлийг татаж авах</button>
   </div>
 
   
