--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -88,6 +88,10 @@
             <br>
             <a class="link" href="https://dannyibanez.myportfolio.com/work" target="_blank">Danny Ibañez- MoMaP Logo Creator</a>
         </p>
+      <h3>GitHub Repository</h3>
+        <p>
+          <a class="link" href="https://github.com/LitsaWoo/LitsaWoo.github.io/tree/main/MyWebApp" target="_blank">Code for the map</a>
+        </p>
     </div>
   </div>
 
