--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -91,6 +91,10 @@
             <br>
             <a class="link" href="http://leaflet-extras.github.io/leaflet-providers/preview/" target="_blank">Map Base Layers</a>
         </p>
+        <h3>GitHub Repository</h3>
+        <p>
+          <a class="link" href="https://github.com/LitsaWoo/LitsaWoo.github.io/tree/main/MyWebApp" target="_blank">Code for the map</a>
+        </p>
     </div>
   </div>
 
